@@ -2,37 +2,30 @@ package it.gov.pagopa.common.web.exception;
 
 import it.gov.pagopa.common.web.dto.ErrorDTO;
 import jakarta.servlet.http.HttpServletRequest;
-import java.util.ArrayList;
-import java.util.List;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
-import org.springframework.validation.FieldError;
-import org.springframework.web.bind.MethodArgumentNotValidException;
+import org.springframework.lang.Nullable;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
+import java.util.Optional;
 
 @RestControllerAdvice
 @Slf4j
 public class ErrorManager {
-    private static final ErrorDTO defaultErrorDTO;
-    static {
-        defaultErrorDTO =new ErrorDTO("Error", "Something gone wrong");
+    private final ErrorDTO defaultErrorDTO;
+
+    public ErrorManager(@Nullable ErrorDTO defaultErrorDTO) {
+        this.defaultErrorDTO = Optional.ofNullable(defaultErrorDTO)
+                .orElse(new ErrorDTO("Error", "Something gone wrong"));
     }
+
     @ExceptionHandler(RuntimeException.class)
     protected ResponseEntity<ErrorDTO> handleException(RuntimeException error, HttpServletRequest request) {
-        if(!(error instanceof ClientException clientException) || clientException.isPrintStackTrace() || clientException.getCause() != null){
-            log.error("Something went wrong handling request {}", getRequestDetails(request), error);
-        } else {
-            log.info("A {} occurred handling request {}: HttpStatus {} - {} at {}",
-                    clientException.getClass().getSimpleName(),
-                    getRequestDetails(request),
-                    clientException.getHttpStatus(),
-                    clientException.getMessage(),
-                    clientException.getStackTrace().length > 0 ? clientException.getStackTrace()[0] : "UNKNOWN");
-        }
+
+        logClientException(error, request);
 
         if(error instanceof ClientExceptionNoBody clientExceptionNoBody){
             return ResponseEntity.status(clientExceptionNoBody.getHttpStatus()).build();
@@ -41,11 +34,11 @@ public class ErrorManager {
             ErrorDTO errorDTO;
             HttpStatus httpStatus;
             if (error instanceof ClientExceptionWithBody clientExceptionWithBody){
-                httpStatus=(clientExceptionWithBody).getHttpStatus();
-                errorDTO = new ErrorDTO(clientExceptionWithBody.getCode(),  clientExceptionWithBody.getMessage());
+                httpStatus = clientExceptionWithBody.getHttpStatus();
+                errorDTO = new ErrorDTO(clientExceptionWithBody.getCode(),  error.getMessage());
             }
             else {
-                httpStatus=HttpStatus.INTERNAL_SERVER_ERROR;
+                httpStatus = HttpStatus.INTERNAL_SERVER_ERROR;
                 errorDTO = defaultErrorDTO;
             }
             return ResponseEntity.status(httpStatus)
@@ -54,27 +47,32 @@ public class ErrorManager {
         }
     }
 
-    @ExceptionHandler(MethodArgumentNotValidException.class)
-    public ResponseEntity<ErrorDTO> handleMethodArgumentNotValidExceptions(MethodArgumentNotValidException ex) {
-        List<String> errors = new ArrayList<>();
-        ex.getBindingResult().getAllErrors().forEach(error -> {
-            if (error instanceof FieldError fieldErrorInput) {
-                String fieldName = fieldErrorInput.getField();
-                String errorMessage = error.getDefaultMessage();
-                errors.add(String.format("[%s]: %s", fieldName, errorMessage));
-            } else {
-                String objectName = error.getObjectName();
-                String errorMessage = error.getDefaultMessage();
-                errors.add(String.format("[%s]: %s", objectName, errorMessage));
-            }
-        });
-        String message = String.join(" - ", errors);
-        return new ResponseEntity<>(
-                new ErrorDTO(HttpStatus.BAD_REQUEST.name(), message), HttpStatus.BAD_REQUEST);
+    public static void logClientException(RuntimeException error, HttpServletRequest request) {
+        Throwable unwrappedException = error.getCause() instanceof ServiceException
+                ? error.getCause()
+                : error;
+
+        String clientExceptionMessage = "";
+        if(error instanceof ClientException clientException) {
+            clientExceptionMessage = ": HttpStatus %s - %s%s".formatted(
+                    clientException.getHttpStatus(),
+                    (clientException instanceof ClientExceptionWithBody clientExceptionWithBody) ? clientExceptionWithBody.getCode() + ": " : "",
+                    clientException.getMessage()
+            );
+        }
+
+        if(!(error instanceof ClientException clientException) || clientException.isPrintStackTrace() || unwrappedException.getCause() != null){
+            log.error("Something went wrong handling request {}{}", getRequestDetails(request), clientExceptionMessage, unwrappedException);
+        } else {
+            log.info("A {} occurred handling request {}{} at {}",
+                    unwrappedException.getClass().getSimpleName() ,
+                    getRequestDetails(request),
+                    clientExceptionMessage,
+                    unwrappedException.getStackTrace().length > 0 ? unwrappedException.getStackTrace()[0] : "UNKNOWN");
+        }
     }
 
     public static String getRequestDetails(HttpServletRequest request) {
         return "%s %s".formatted(request.getMethod(), request.getRequestURI());
     }
-
 }
